--- a/css/style-minimal-flat.css
+++ b/css/style-minimal-flat.css
@@ -277,7 +277,12 @@ table {
 /* 1. Generic styles ................... */
 /* ------------------------------------- */
 body {
-  background: #ff3366;
+  background: #333 url(../img/bg.jpg) no-repeat center center fixed;
+  -webkit-background-size: cover;
+  -moz-background-size: cover;
+  -o-background-size: cover;
+  background-size: cover;
+
   font-family: "Varela Round", "Helvetica Neue", "Lucida Grande", Arial, Verdana, sans-serif;
   color: #FFFFFF;
   -webkit-font-smoothing: antialiased;
@@ -503,6 +508,7 @@ sup {
   top: 0;
   left: -50%;
   background: #222;
+  background: rgba(0,0,0,.8);
   width: 100%;
   height: 100%;
   -webkit-transition: all 0.5s cubic-bezier(0.7, 0, 0.3, 1);
